add endpoint for triggering dag
