# src/components/airflow/airflow.validation.ts
@@ -1,0 +1,8 @@
+import Joi from 'joi';
+
+export const triggerDagRunValidation = {
+  body: Joi.object({
+    dagId: Joi.string().required(),
+    conf: Joi.object().optional(),
+  }),
+};
