# src/swagger/swagger.json
@@ -14,6 +14,37 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/api/airflow/trigger-dag": {
+      "post": {
+        "tags": ["Airflow DAG Management"],
+        "summary": "Trigger an Airflow DAG",
+        "description": "This endpoint triggers a DAG run in Airflow using the specified `dagId`.",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "dagRunRequest",
+            "description": "Request body containing the DAG ID and optional configuration.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DagRunRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "DAG triggered successfully",
+            "schema": {
+              "$ref": "#/definitions/DagRunResponse"
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/api/dapp-analytics/dapp": {
       "post": {
         "tags": ["DApp Management"],
@@ -848,6 +879,33 @@
     }
   },
   "definitions": {
+    "DagRunRequest": {
+      "type": "object",
+      "required": ["dagId"],
+      "properties": {
+        "dagId": {
+          "type": "string",
+          "description": "The ID of the DAG to trigger"
+        },
+        "conf": {
+          "type": "object",
+          "description": "Optional configuration parameters for the DAG run"
+        }
+      }
+    },
+    "DagRunResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string",
+          "example": "DAG triggered successfully"
+        },
+        "data": {
+          "type": "object",
+          "description": "Details of the triggered DAG run"
+        }
+      }
+    },
     "DAppData": {
       "type": "object",
       "required": ["name", "blockchain", "abis"],
